--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,40 @@
   }
 } */
 
+/* header styles */
+header{
+  width: 100%;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--cinephoria-bg);
+  position: sticky;
+  top:0;
+  border-bottom: solid 1px #000000;
+}
+header > * {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.header-left, .header-right{
+  flex-grow: 0;
+}
+.header-middle{
+  flex-grow: 1;
+}
+.header-icon-link{
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  color: inherit;
+  text-decoration: inherit;
+}
 
+
+/* Footer styles */
 Footer {
   background-color: #2c3e50;
   color: white;
